# raveloxzemu

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  compile_commands.json  raveloxzemu
include/: clock.h  cpu.h  cpu_fwd.h  instruction.h  memory.h  opcode_table.h  register.h  test_program.h
src/: clock.c  cpu.c  instruction.c  main.c  memory.c  op_codes.txt  opcode_table.c  register.c  test_program.c
